style.css
html, body {
    width:  100%;
    height: 100%;
    margin: 0px;
    max-width: 100%;
    overflow-x: hidden;
}

.controls {
    position: absolute;
    top: 0px;
    left: 100%;
    background-color: rgba(255,255,255,0.5);    
    border-radius: 0 0 0 5px;
    padding: 10px;
    
    -webkit-transition: 1s ease-out;
    -moz-transition: 1s ease-out;
    -o-transition: 1s ease-out;
    transition: 1s ease-out;
}

.menuBorder {
    position: absolute;
    top: 0px;
    left: -38px;
    background-color: rgba(255,255,255,0.5);
    border-radius: 3px 0 0 3px;
}

.menuToggle {
    margin: 4px;
}

.hamburger {
    border-bottom: 17px double black; 
    border-top: 6px solid black;
    height: 5px; 
    width: 30px;
}

.slideIn {
    -webkit-transform: translate(-200px,0px);
    -moz-transform: translate(-200px,0px);
    -o-transform: translate(-200px,0px);
    -ms-transform: translate(-200px,0px);
    transform: translate(-200px,0px); 
}

